@@ -1,0 +1,1 @@
+AddDefaultCharset iso-8859-1
