@@ -1,3 +1,8 @@
+2006-10-10  Christian Reis  <kiko@async.com.br>
+
+	* Makefile: attempt to make our latin-1 pages render correctly.
+	Might even work!
+
 2006-10-09  Rafael Villar Burke  <pachi@rvburke.com>
 
 	* applications.src: Add Labyrinth mind-mapping tool
